All issues Ok !!! (quick)
Globalement Completed ! (he said)

--- a/src/gui/interface_Restau_Carte_ou_Menus_V2.ui
+++ b/src/gui/interface_Restau_Carte_ou_Menus_V2.ui
@@ -177,7 +177,7 @@
                   </layout>
                  </item>
                  <item>
-                  <widget class="QPushButton" name="pushButton">
+                  <widget class="QPushButton" name="cancel_menu_btn">
                    <property name="sizePolicy">
                     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                      <horstretch>0</horstretch>
