pop-up button yes/no before payment or cancellation of a command : Step 2. = Ok ! 1. designed ui and compiled to py class 2. modifications in Grand_Restaurant_V2.py_V2.py and (created) dialog_OuiNon.py

--- a/src/gui/dialog_yes_no.ui
+++ b/src/gui/dialog_yes_no.ui
@@ -58,7 +58,7 @@
     </font>
    </property>
    <property name="toolTip">
-    <string extracomment="Braavo !!!"/>
+    <string/>
    </property>
    <property name="text">
     <string>OUI</string>
@@ -75,7 +75,6 @@
    </property>
    <property name="font">
     <font>
-     <family>Jomolhari</family>
      <pointsize>18</pointsize>
     </font>
    </property>
